<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".agregarDeudor"
    tools:showIn="@layout/activity_agregar_deudor">

    <TextView
        android:id="@+id/agregarDeudorText"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agregarDeudorText"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.127" />

    <TextView
        android:id="@+id/textView3"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="141dp"
        android:layout_height="40dp"
        android:text="@string/añadirNuevoDeudorText"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.285" />

    <TextView
        android:id="@+id/textView4"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="83dp"
        android:layout_height="25dp"
        android:text="@string/deudaNuevaText"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.265"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.392" />

    <Button
        android:id="@+id/enviarButton"
        style="@android:style/Widget.Material.Light.Button.Inset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#FFFFFF"
        android:text="@string/enviarButton"
        android:textColor="#020202"
        android:textColorHighlight="#141414"
        android:textColorLink="#070707"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.682" tools:targetApi="lollipop" />

    <EditText
        android:id="@+id/nuevoNombreEditText"
        android:layout_width="157dp"
        android:layout_height="39dp"
        android:ems="10"
        android:hint="@string/nuevoNombre"
        android:inputType="textPersonName"
        android:text="@string/nuevoNombreEdit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.748"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.284"
        android:autofillHints="" tools:targetApi="o" />

    <EditText
        android:id="@+id/deudaNuevaEdit"
        android:layout_width="114dp"
        android:layout_height="58dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nuevaDeuda"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.639"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38"
        tools:targetApi="o" />

</androidx.constraintlayout.widget.ConstraintLayout>